test/decl.ruse
// fail

func main() int {
    var a int
    var a int = 4 // error
    var b = 4
    b.mem // error

    {
        var c int
        a + b + c
    }
    c // error

    var c = &a

    return d // error
}
